libs/common/src/main/java/com/example/libs/common/error/ResourceNotFoundException.java
package com.example.libs.common.error;

public class ResourceNotFoundException extends  RuntimeException{
    public ResourceNotFoundException (String msg){
        super(msg);
    }
}
